k8s/base_setup/ingress_prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tam-backend-service
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: backendtam.skycom.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-tam-web-service
                port:
                  number: 80
